<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"

    android:layout_height="wrap_content"

    android:background="@drawable/list_selector"

    android:orientation="horizontal"

    android:padding="5dip" >
    <!-- ListRow Left side Thumbnail image -->
    <LinearLayout

        android:id="@+id/thumbnail"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"

        android:layout_marginRight="5dip"

        android:padding="3dip" >
        <ImageView
            android:id="@+id/list_image"

            android:contentDescription="@string/app_name"

            android:layout_width="60dip"

            android:layout_height="60dip"

            android:src="@mipmap/admin" />
    </LinearLayout>
    <!-- Rightend Arrow -->
    <ImageView

        android:id="@+id/imageView1"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"

        android:layout_centerVertical="true"

        android:contentDescription="@string/app_name"

        android:src="@android:drawable/ic_menu_more" />
    <!-- City-->
    <TextView

        android:id="@+id/textViewName"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_toRightOf="@mipmap/admin"

        android:layout_marginLeft="75dip"

        android:layout_centerVertical="true"

        android:paddingBottom ="10dip"

        android:text="@string/strStName"

        android:textColor="#040404"

        android:textSize="25dip"

        android:textStyle="bold"

        android:typeface="sans" />
    <!-- Weather Information-->
    <TextView

        android:id="@+id/textViewdetails"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_below="@+id/textViewName"

        android:layout_alignLeft="@+id/textViewName"

        android:paddingTop="5dip"

        android:layout_centerHorizontal="true"

        android:text="@string/strStDetails"

        android:textColor="#343434"

        android:textSize="15dip" />
</RelativeLayout>