<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ke.co.imond.fingermap.EnrollActivity"
    tools:showIn="@layout/activity_enroll">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:id="@+id/layout1">

            <TextView
                android:id="@+id/PFNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="PF NO"
                android:width="80dp" />

            <EditText
                android:id="@+id/pf_no"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_below="@+id/layout1"
            android:id="@+id/layout2">

            <TextView
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="First Name"
                android:width="80dp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout2"
            android:id="@+id/layout3">

            <TextView
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Last Name"
                android:width="80dp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout3"
            android:padding="2dp">

            <TextView
                android:id="@+id/Designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="80dp"
                android:gravity="right"
                android:text="Designation" />

            <EditText
                android:id="@+id/designation"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/cardButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout5"
            android:layout_marginLeft="115dp"
            android:background="@drawable/round"
            android:text="@string/nfc_card_register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="8sp" />

        <ImageButton
            android:id="@+id/thumbFP"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="14dp"
            android:src="@mipmap/msign2"
            android:background="@drawable/round"
            android:layout_below="@+id/layout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="33dp"
            android:layout_marginStart="33dp" />

        <EditText
            android:id="@+id/enrolledThumb"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_below="@+id/thumbFP" />


        <ImageButton
            android:id="@+id/indexFP"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignEnd="@+id/guardian"
            android:layout_alignRight="@+id/guardian"
            android:layout_alignTop="@+id/thumbFP"
            android:background="@drawable/round"
            android:layout_marginEnd="43dp"
            android:layout_marginRight="43dp"
            android:src="@mipmap/msign2" />

        <EditText
            android:id="@+id/enrolledIndex"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_below="@+id/indexFP" />

        <TextView
            android:id="@+id/thumb_fp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/thumbFP"
            android:layout_alignLeft="@+id/thumbFP"
            android:layout_alignStart="@+id/thumbFP"
            android:text="Thumb"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/index_fp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/indexFP"
            android:layout_alignLeft="@+id/indexFP"
            android:layout_alignStart="@+id/indexFP"
            android:text="Index"
            android:textColor="#fff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/guardian"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/enrolledThumb"
            android:layout_alignBottom="@+id/enrolledThumb"
            android:layout_centerHorizontal="true"
            android:background="@color/redDark"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/Department"
            android:textColor="#ffffff"
            android:typeface="monospace" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/guardian"
            android:id="@+id/layout7">

            <TextView
                android:id="@+id/Department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Dept Name"
                android:width="80dp" />

            <EditText
                android:id="@+id/department_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout7"
            android:id="@+id/layout8">

            <TextView
                android:id="@+id/Department_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="Section"
                android:width="80dp" />

            <EditText
                android:id="@+id/section_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout8"
            android:id="@+id/layout9">

            <TextView
                android:id="@+id/SectionID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="SectionID"
                android:width="80dp" />

            <EditText
                android:id="@+id/section_id"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout9"
            android:background="@drawable/round"
            android:gravity="center"
            android:text="@string/add_employee"
            android:textColor="#ffffff" />



    </RelativeLayout>

</ScrollView>
